Fix: limit characters and prevent text wrap in changes Table

--- a/dashboard/static/dashboard/css/dashboard.css
+++ b/dashboard/static/dashboard/css/dashboard.css
@@ -48,4 +48,11 @@
   cursor: pointer;
 }
 
+.truncate_changes {
+  max-width: 50px;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
 
